--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,38 +25,82 @@
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/sortByRank"
-            android:gravity="center"
+        <LinearLayout
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
-            android:textSize="@dimen/_12ssp"
-            android:text="@string/cryptocurrency"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/sortByRank"
+                android:gravity="center"
 
-        <TextView
-            android:id="@+id/sortByPrice"
-            android:layout_weight="1"
-            android:text="@string/price"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
-            android:textSize="@dimen/_12ssp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+                android:textStyle="bold"
+                android:textSize="@dimen/_12ssp"
+                android:text="@string/cryptocurrency"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
 
-        <TextView
-            android:id="@+id/sortByChange"
+            <ImageView
+                android:id="@+id/sortByRankImg"
+                android:src="@drawable/ic_baseline_arrow_drop_down_24"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+            ></ImageView>
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_weight="1"
-            android:text="@string/hours"
+            android:orientation="horizontal"
             android:gravity="center"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
-            android:textSize="@dimen/_12ssp"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/sortByPrice"
+
+                android:text="@string/price"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="@dimen/_12ssp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+            <ImageView
+                android:id="@+id/sortByPriceImg"
+                android:background="@drawable/ic_baseline_arrow_drop_down_24"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                ></ImageView>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/sortByChange"
+                android:text="@string/hours"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="@dimen/_12ssp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+            <ImageView
+                android:id="@+id/sortByChangeImg"
+                android:background="@drawable/ic_baseline_arrow_drop_down_24"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                ></ImageView>
+        </LinearLayout>
+
+
         </LinearLayout>
 
     <View
